# soundboard

./: .gitignore  Cargo.toml  LICENSE  Readme.org  prepare.sh
src/: api.rs  discord.rs  main.rs  model.rs  player.rs  server.rs
src/public/: index.html  index.js
templates/: index.html
