[package]
name = "soundboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.5.15", features = ["json"]}
axum_static_macro = "1"
clap = { version = "3.2.20", features = ["derive"] }
cpal = "0.13.5"
hyper = "0.14.20"
kira = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.21.0", features = ["full"] } # TODO defeature
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
