[package]
name = "soundboard"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
axum = {version = "0.5.15", features = ["json"]}
axum_static_macro = { git = "https://github.com/mullr/axum_static_macro", branch = "fix-release-build" }
clap = { version = "3.2.20", features = ["derive"] }
cpal = "0.13.5"
futures = "0.3.24"
hyper = "0.14.20"
kira = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1"
tokio = { version = "1.21.0", features = ["full"] } # TODO defeature
tokio-stream = { version = "0.1.9", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
